--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,20 +4,21 @@ S3method(coef,fit)
 S3method(print,fit)
 S3method(residuals,fit)
 S3method(vcov,fit)
-export(OLS)
-export(SchurC)
-export(WLS)
-export(diagQF)
-export(fit.Probit)
-export(fit.Robit)
+export(fit.BinReg)
+export(rBinReg)
 exportClasses(fit)
 importFrom(Rcpp,sourceCpp)
 importFrom(methods,new)
 importFrom(methods,show)
+importFrom(stats,dlogis)
 importFrom(stats,dnorm)
 importFrom(stats,dt)
+importFrom(stats,plogis)
 importFrom(stats,pnorm)
 importFrom(stats,pt)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
-useDynLib(Probit)
+importFrom(stats,rnorm)
+importFrom(stats,rt)
+importFrom(stats,runif)
+useDynLib(BinReg)
