--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ S3method(vcov,fit)
 export(fit.BinReg)
 export(rBinReg)
 exportClasses(fit)
+import(stats)
 importFrom(Rcpp,sourceCpp)
-importFrom(methods,new)
 importFrom(methods,show)
 importFrom(stats,dlogis)
 importFrom(stats,dnorm)
@@ -16,8 +16,6 @@ importFrom(stats,dt)
 importFrom(stats,plogis)
 importFrom(stats,pnorm)
 importFrom(stats,pt)
-importFrom(stats,qnorm)
-importFrom(stats,qt)
 importFrom(stats,rnorm)
 importFrom(stats,rt)
 importFrom(stats,runif)
